@@ -1,3 +1,8 @@
+2012-04-07  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/zzz.R: Add 'lib.loc=libname' to packageDescription() call as
+	requested by Brian Ripley
+
 2012-03-20  Dirk Eddelbuettel  <edd@debian.org>
 
 	* Applied another patch by Murray:
